AC_INIT([caki], [0.1.1])
AM_INIT_AUTOMAKE()

#AC_ARG(debug, [   set debug mode.])

#if test $debug == "yes"; then
# AC_DEFINE(DEBUG, 1)
#fi

# Checks for programs.
AC_PROG_CC

# Checks for header files.
AC_CHECK_HEADERS([malloc.h string.h])

# Checks for library functions.
AC_FUNC_MALLOC

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
